--- a/index.html
+++ b/index.html
@@ -25,18 +25,19 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/clipper-lib@6.4.2/clipper.js"></script>
 
-    <script src="data/point.js"></script>
-    <script src="data/segment.js"></script>
-    <script src="data/graph.js"></script>
-    <script src="data/myMath.js"></script>
-    <script src="data/graphEditor.js"></script>
-    <script src="data/road.js"></script>
-    <script src="data/polygon.js"></script>
-    <script src="data/car.js"></script>
-    <script src="data/sensors.js"></script>
-    <script src="data/network.js"></script>
-    <script src="data/playGround.js"></script>
-    <script src="data/roadJunction.js"></script>
+    <script src="js/point.js"></script>
+    <script src="js/segment.js"></script>
+    <script src="js/graph.js"></script>
+    <script src="js/myMath.js"></script>
+    <script src="js/graphEditor.js"></script>
+    <script src="js/road.js"></script>
+    <script src="js/polygon.js"></script>
+    <script src="js/car.js"></script>
+    <script src="js/sensors.js"></script>
+    <script src="js/network.js"></script>
+    <script src="js/playGround.js"></script>
+    <script src="js/roadJunction.js"></script>
+    
     <script src="main.js" defer></script>
 </body>
 </html>
